# ic-inspector

./: .eslintrc.js  .gitignore  .prettierrc.yaml  LICENSE  entry-background.js  entry-panel.js  jest.setup.test.ts  jest.setup.ts  manifest.json  package-lock.json  package.json  panel.js  readme.md  rollup.config.js  tsconfig.json
.github/workflows/: publish.yml  test.yml
.storybook/: main.js  preview.js
patches/: @dfinity+agent+0.10.2.patch  iso-url+0.4.7.patch
rust/: .gitignore  Cargo.toml
rust/src/: lib.rs
src/: candid.wasm  entry-devtools.html  index.html  index.ts  manifest.json  panel.html  panel.js
src/api/: actors.ts
src/api/idl/: all.d.ts  all.ts  candid-ui.d.ts  candid-ui.ts  canister-registry.did.d.ts  dab-canisters.did.d.ts  dab-canisters.did.ts  dab-nfts.did.d.ts  dab-nfts.did.ts  dab-tokens.did.d.ts  dab-tokens.did.ts
src/devtools/: app.tsx  index.html  index.ts
src/devtools/panel/: candid.ts  capture.ts  (+7 more)
src/lib/: candid.wasm
src/repositories/: logs.test.ts  logs.ts
src/sandbox/: index.html  index.ts
src/services/: candid-no-interface.ts  candid.ts  capture-new.ts  capture.test.ts  capture.ts  common.test.ts  common.ts  dab.ts  logging.ts  sandbox.ts
src/stubs/: distrikt.getFollowCounts.json  distrikt.getLatestUsers.json  distrikt.getSelf.json  distrikt.isFollowing.json  dscvr.get_notifications.json  dscvr.get_self.json  dscvr.list_highlighted_portals.json  index.test.ts  index.ts  metascore.getScoreCount.json
src/ui/: common.test.ts  common.ts  details.module.css  details.stories.tsx  details.tsx  root.stories.tsx  root.tsx
(+65 files in other folders)
